Try to change the appearance

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
 </div>
 <p>
-	To see your current location's weather <span class="click" id="click"><strong> Click here</strong></span>
+	To see your current location's weather <span class="click" id="click"><strong><strong> Click here
+
+  </strong> </strong></span>
 </p>
 <a href="https://github.com/Nazaninhk/my-weather-app" id="git-Link">Open source-code</a><Span id="nazaznin"> by Nazanin Heidari</Span>
     </div>
