--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   </strong> </strong></span>
 </p>
-<a href="https://github.com/Nazaninhk/my-weather-app" id="git-Link">Open source-code</a><Span id="nazaznin"> by Nazanin Heidari</Span>
+<a href="https://github.com/Nazaninhk/my-weather-app"  target="_blank" id="git-Link">Open source-code</a><Span id="nazaznin"> by Nazanin Heidari</Span>
     </div>
     <script src="src/index.js">
         
